--- a/assets/css/styles1.css
+++ b/assets/css/styles1.css
@@ -190,7 +190,7 @@ body{
 .about .row .content p{
     font-size: 1.6rem;
     color: #4D4D4D;
-    padding: 1rem 0;
+    padding: 3rem 0;
     line-height: 1.8;
 }
 
@@ -328,6 +328,11 @@ body{
     section{
         padding: 2rem;
     }
+
+    .button{
+        margin-top: 1rem;
+        position: static;
+    }
     
 
 }
@@ -361,6 +366,7 @@ body{
 
     .home{
         justify-content: center;
+        margin-top: 7rem;
         text-align: center;
         flex-direction: column;
         padding: 100px 2%;
@@ -382,13 +388,45 @@ body{
 
     }
 
+    .btn{
+        border: 1px solid black;
+        font-family: 'Poppins', sans-serif;
+        background-color: #739E6F;
+        position: relative;
+        border-radius: 50px;
+        justify-content: center;
+        align-items: center;
+        font-weight: bolder;
+        font-size: 2rem;
+        color: black;
+        padding: 13px;
+    }
 
+    .btn:hover{
+        background-color: #76ed6e;
+        transform: scale(1.1);
+        letter-spacing: 1px;
+    }
+
+    .button{
+        position: relative;
+    }
 }
+
+
 
 @media (max-width:450px){
 
     html{
         font-size: 50%;
+    }
+    .btn{
+        font-size: 1.7rem;
+    }
+    .btn:hover{
+        transform: scale(1);
+        letter-spacing: 0;
+
     }
     
 
