--- a/assets/css/veja_mais.css
+++ b/assets/css/veja_mais.css
@@ -1,6 +1,30 @@
+.home{
+    min-height: 85vh;
+    display: flex;
+    align-items: center;
+    background: url(../images/fotoparque1.jpg);
+    background-size: cover ;
+    background-position: center;
+
+}
+
+.escrita h1{
+    font-size: 6rem;
+    color: #739E6F;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+span{
+    color: #fff;
+}
+
 .escrita{
     padding-left: 10rem;
-    margin-top: 10rem;
     margin-right: 5rem;
-    font-size: small;
+    font-size: 1.5rem;
+    margin-bottom: 15rem;
+
 }
+
