--- a/assets/css/meu_perfil.css
+++ b/assets/css/meu_perfil.css
@@ -1,42 +1,304 @@
-.main_container {
-    color: #ffffff;
-    display: flex;
-    width: 100%;
-    height: 60px;
-    margin: 0;
-    align-self: center;
-    margin-left: 2rem;
-    padding-bottom: 3rem;
-    margin-bottom: 6rem;
-    font-size: 2rem;
-}
-    
-.main_container i {
-    font-size: 2.6em;
-    margin-top: 0.4rem;
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wgh@200;300;400;600&display=swap');
+
+:root{
+    --green:#739E6F;
 }
 
-.container a {
-    color: #ffffff;
+
+*{
+    font-family: 'Nunito', sans-serif;
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
     text-decoration: none;
-    font-weight: bold;
-    font-size: 1.8rem;
-    display: inline-flex;
-    position: relative;
+    outline: none;
+    border: none;
+    text-transform: capitalize;
+    transition: all .2s linear;
 }
 
-.container a:hover {
-    transform: scale(1.2);
-    transition: 0.3s ease;
+::selection{
+    background: var(--green);
+    color: #333;
+}
+
+html{
+    font-size: 62.5%;
+    overflow-x: hidden;
+}
+
+html::-webkit-scrollbar{
+    width: 1.4rem; 
+}
+
+html::-webkit-scrollbar-track{
+    background-color: #000;
+}
+
+html::-webkit-scrollbar-thumb{
+    background-color: var(--green);
+}
+
+body{
+    background-color: #111;
+    overflow: hidden;
+    padding-left: 35rem;
+}
+
+section{
+    min-height: 100vh;
+    padding: 1rem;
+}
+
+.btn{
+    padding: .7rem 3rem;
+    background-color: #333;
+    color: #fff;
     cursor: pointer;
+    margin-top: 1rem;
+    font-size: 2rem;
+    border-radius: 5rem;
 }
 
-body {
-    background-color: #739E6F;
+.btn i{
+    padding: 0 .5rem;
+    font-size: 1.8rem;
 }
+
+.btn:hover{
+    background-color: var(--green);
+}
+
+.heading{
+    text-align: center;
+    margin:0 6rem;
+    font-size: 4rem;
+    padding: 1rem;
+    border-bottom: .1rem solid #fff4;
+    color: #fff;
+
+}
+
+.heading span {
+    color: var(--green);
+}
+
+
+header{
+    position: fixed;
+    top: 0; left: 0;
+    z-index: 1000;
+    height: 100%;
+    width: 35rem;
+    background: #739E6F;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+    text-align: center;
+}
+
+header .user img{
+    height: 17rem;
+    width: 17rem;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 1rem;
+    border: .7rem solid var(--green);
+    background: url(../images/perfil.jpg);
+}
+
+header .user .name{
+    font-size: 3.5rem;
+    color: #fff;
+}
+
+header .user .post{
+    font-size: 2rem;
+    color: #eee;
+}
+
+header .navbar{
+    width: 100%;
+}
+
+header .navbar .ul{
+    list-style: none;
+    padding:1rem 3rem;
+}
+
+header .navbar ul li a{
+    display: block;
+    padding: 1rem;
+    margin: 1.5rem 0;
+    background-color: #fff;
+    font-size: 2rem;
+    border-radius: 5rem;
+}
+
+header .navbar ul li a{
+    color: #000;
+}
+
+
+header .navbar ul li a:hover{
+    background:var(--green);
+}
+
+#menu{
+    position: fixed;
+    top: 2rem; right: 2rem;
+    color: #fff;
+    cursor: pointer;
+    font-size: 2.rem;
+    padding: 1rem 1.5rem;
+    z-index: 1000;
+    display: none;
+}
+
+.home{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    padding:0 15rem;
+}
+
+.home h3{
+    font-size: 2.5rem;
+    color: #fff;
+
+}
+
+.home h1{
+    font-size: 5rem;
+    color: #fff;
+}
+
+.home h1 span{
+    color: #739E6F;
+}
+
+
+.home p{
+    font-size: 2rem;
+    color: #eee;
+    padding: 1rem 0;
+}
+
+.about .row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding:1rem 0;
+}
+
+.about .row .info{
+    flex: 1 1 48rem;
+    padding: 2 rem 1rem;
+    padding-left: 6rem;
+}
+
+.about .row .info h3{
+    font-size: 2rem;
+    color: var(--green);
+    padding: 1rem 0;
+    font-weight: normal;
+}
+
+.about .row .info h3 span{
+    color: #eee;
+    padding:0 .5rem;
+
+}
+
+.about .row .counter{
+    flex: 1 1 48rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.about .row .counter .box{
+    width: 20rem;
+    background-color: #222;
+    text-align: center;
+    padding: 2rem;
+    margin: 2rem;
+}
+
+.about .row .counter .box span{
+    font-size: 4rem;
+    color: var(--green);
+}
+
+.about .row .counter .box h3{
+font-size: 2rem;
+color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+/* media queries */
+@media (max-width: 1200px){
     
-.container{
-    color: #ffffff;
-    font-size: 1.5rem;
-    margin-left: 3rem;
+    html{
+        font-size: 55%;
+    }
+
+    .home{
+        padding: 1rem 4rem;
+    }
+
+}
+
+@media (max-width: 991px){
+    
+    header{
+        left: -120%;
+    }
+
+    #menu {
+        display: block;
+
+    }   
+
+    header.toggle{
+        left: 0%;
+    }
+
+    body{
+        padding: 0;
+    }
+
+}
+
+@media (max-width: 756px){
+    
+    html{
+        font-size: 50%;
+    }
+}
+
+@media (max-width: 400px){
+    
+    header{
+        width: 100vw;
+    }
+
+    .heading{
+        margin: 0 3rem;
+    }
+
+    .about .row .counter .box{
+        width: 100%;
+    }
 }
