--- a/assets/css/questions.css
+++ b/assets/css/questions.css
@@ -122,10 +122,9 @@
     margin-top: 2.4rem;
   }
 
-  #next{
+  #next input{
     height: 6rem;
     width: 100%;
-    outline: none;
     border-radius: 14px;
     padding-left: 15px;
     font-size: 16px;
@@ -135,7 +134,7 @@
     margin-top: 2.5rem;
   }
 
-  #next:hover{
+  #next input:hover{
     transition: all 0.5s ease;
     cursor: pointer;
     background-color: var(--lightgreen);
