--- a/assets/css/sobre_nos.css
+++ b/assets/css/sobre_nos.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
-*{
-    font-family: 'Roboto', sans-serif;
+
+* {
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,38 +9,41 @@
     transition: .2s linear;
 }
 
-::root{
-    --border:.1rem solid rgba(255,255,255,.3)
+:root {
+    --border: .1rem solid rgba(255, 255, 255, .3)
 }
-.logo{
+
+.logo {
     width: 25rem;
 }
-html{
+
+html {
     font-size: 62.5%;
-    overflow-x:hidden;
+    overflow-x: hidden;
     scroll-padding-top: 9rem;
     scroll-behavior: smooth;
 }
 
-html::-webkit-scrollbar{
+html::-webkit-scrollbar {
     width: .8rem;
 }
 
-html::-webkit-scrollbar-track{
-    background:transparent;
+html::-webkit-scrollbar-track {
+    background: transparent;
 }
 
-html::-webkit-scrollbar-thumb{
+html::-webkit-scrollbar-thumb {
     background: #fff;
     border-radius: 5rem;
 }
 
-body{
+body {
     background: #bcd6b9;
 
 }
-.header{
-    background:#fffef9;
+
+.header {
+    background: #fffef9;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -52,7 +56,7 @@ body{
     z-index: 1000;
 }
 
-.header .navbar a{
+.header .navbar a {
     margin: 1.3rem;
     font-size: 1.8rem;
     color: #8e8c8c;
@@ -67,111 +71,193 @@ body{
 }
 
 
-.header .navbar i{
+.header .navbar i {
     font-size: 1.8rem;
     color: #fff;
     border: 1px solid black;
-    padding: 10px 0 10px  0;
+    padding: 10px 0 10px 0;
 }
 
-.header .icons div{
-    color:#fff ;
-    cursor:pointer;
+.header .icons div {
+    color: #fff;
+    cursor: pointer;
     font-size: 2.5rem;
     margin-left: 2rem;
 }
 
-.header .icons div:hover{
+.header .icons div:hover {
     color: #739E6F;
 }
 
-#menu-btn{
+#menu-btn {
     display: none;
+    color: #4D4D4D;
 }
 
-
-
-/* SOBRENOS */
-
-.home{
-    min-height: 85vh;
-    display: flex;
-    align-items: center;
-    background: url(../images/fotoparque1.jpg);
-    background-size: cover ;
-    background-position: center;
-
+.section {
+    width: 100%;
+    min-height: 100vh;
+    background-color: #bcd6b9;
 }
 
-.escrita h1{
-    font-size: 6rem;
-    color: #739E6F;
+.container {
+    width: 80%;
+    display: block;
+    margin: auto;
+    padding-top: 100px;
+}
+
+.content-section {
+    float: left;
+    width: 55%;
+}
+
+.image-section {
+    float: right;
+    width: 40%;
+}
+
+.image-section img {
+    width: 100%;
+    height: auto;
+}
+
+.content-section .title {
     text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 2rem;
+    font-size: 28px;
 }
 
-span{
+.content-section .title span {
+    color: #739E6F;
+}
+
+.content-section .content h3 {
+    margin-top: 20px;
+    color: #4D4D4D;
+    font-size: 21px;
+}
+
+.content-section .content p {
+    margin-top: 10px;
+    font-family: sans-serif;
+    font-size: 19px;
+    line-height: 1, 5;
+}
+
+.content-section .content .button {
+    margin-top: 30px;
+}
+
+.content-section .content .button a {
+    background-color: #739E6F;
+    padding: 12px 40px;
+    text-decoration: none;
+    color: #4D4D4D;
+    font-size: 17px;
+    letter-spacing: 1.5;
+    border-radius: 16px;
+}
+
+.content-section .content .button a:hover {
+    background-color: #4D4D4D;
     color: #fff;
+    transform: scale(1.5);
 }
 
-.escrita{
-    padding-left: 10rem;
-    margin-right: 5rem;
-    font-size: 1.5rem;
-    margin-bottom: 15rem;
+@media screen and (max-width:768px) {
+    .container {
+        width: 80%;
+        display: block;
+        margin: auto;
+        padding-top: 50px;
+    }
 
+    .content-section {
+        float: none;
+        width: 100%;
+        display: block;
+        margin: auto;
+    }
+
+    .image-section {
+        float: none;
+        width: 100%;
+        display: block;
+        margin: auto;
+    }
+
+    .image-section img{
+        width: 100%;
+        height: auto;
+        display: block;
+        margin: auto;
+    }
+
+    .content-section .title{
+        text-align: center;
+        font-size: 20px;
+        margin-top: 5rem;
+    }
+
+    .content-section .content .button{
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .content-section .content .button a{
+        padding: 9px 30px;
+    }
 }
-
 
 /* RESPONSIVIDADE */
 
-@media (max-width:1035px){
+@media (max-width:1035px) {
 
-    html{
+    html {
         font-size: 55%;
     }
 
-    .header{
+    .header {
         padding: 1.5rem 2rem;
     }
 
-    section{
+    section {
         padding: 2rem;
     }
 }
 
-@media (max-width:819px){
+@media (max-width:819px) {
 
-    #menu-btn{
+    #menu-btn {
         display: inline-block;
+        color: #4D4D4D;
     }
 
-    .header .navbar{
+    .header .navbar {
         position: absolute;
         top: 100%;
-        right:-100%;
+        right: -100%;
         background: #fff;
-        width:30rem;    
-        height: calc(100vh - 8rem);   
+        width: 30rem;
+        height: calc(100vh - 8rem);
     }
 
-    .header .navbar.active{
-        right:0;
-    } 
+    .header .navbar.active {
+        right: 0;
+    }
 
-    .header .navbar a{
+    .header .navbar a {
         color: #4D4D4D;
         display: block;
-        margin:1.5rem;
+        margin: 1.5rem;
         padding: .5rem;
-        font-size: 2rem; 
+        font-size: 2rem;
     }
 }
 
-@media (max-width:450px){
+@media (max-width:450px) {
 
-    html{
+    html {
         font-size: 50%;
     }
 }
