--- a/assets/css/sobre_nos.css
+++ b/assets/css/sobre_nos.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 * {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -119,7 +119,8 @@ body {
 
 .image-section img {
     width: 100%;
-    height: auto;
+    margin-top: 1.5rem;
+    height: 50vh;
 }
 
 .content-section .title {
@@ -133,13 +134,14 @@ body {
 
 .content-section .content h3 {
     margin-top: 20px;
+    font-family: 'Poppins', sans-serif;
     color: #4D4D4D;
     font-size: 21px;
 }
 
 .content-section .content p {
     margin-top: 10px;
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 19px;
     line-height: 1, 5;
 }
@@ -151,6 +153,7 @@ body {
 .content-section .content .button a {
     background-color: #739E6F;
     padding: 12px 40px;
+    font-family: 'Poppins', sans-serif;
     text-decoration: none;
     color: #4D4D4D;
     font-size: 17px;
