--- a/assets/css/styles1.css
+++ b/assets/css/styles1.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
 *{
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -208,6 +210,8 @@ body{
     background-color: #a8f3a2;
     position: absolute;
     border-radius: 20px;
+    font-family: 'Poppins', sans-serif;
+
     font-size: 1.5rem;
     color: #343131;
     padding: 13px;
@@ -310,6 +314,8 @@ body{
     background-color: #a8f3a2;
     border-radius: 25px;
     margin-top: 2rem;
+    font-family: 'Poppins', sans-serif;
+
     font-size: 1.8rem;
     color: #343131;
     padding: 15px;
@@ -357,6 +363,7 @@ body{
 
 .footer .links a{
     padding: .7rem 2rem;
+    font-family: 'Poppins', sans-serif;
     color: #fff;
     border: .1rem solid black;
     font-size: 1.5rem;
